feat: decisionセクションのモバイル対応を実装

--- a/index.html
+++ b/index.html
@@ -99,8 +99,12 @@
                   </div>
                 </div>
                 <p class="favorite__text">
-                  1週間ラーメンを口にしないと禁断症状が、、、<br />
-                  醤油・味噌・塩・家系・次郎何でもばっちこい。<br />
+                  1週間ラーメンを口にしないと禁断症状が、、、<br
+                    class="sm-hidden"
+                  />
+                  醤油・味噌・塩・家系・次郎何でもばっちこい。<br
+                    class="sm-hidden"
+                  />
                   ラーメンをはじめとして麺類全般が大好きです！
                 </p>
               </div>
@@ -142,12 +146,18 @@
                 />
               </div>
               <p class="personality__text">
-                考え込みすぎず、自分の意志をもって突き進みます。<br />
-                前に出ること、何かを主張することに躊躇しません。<br />
+                考え込みすぎず、自分の意志をもって突き進みます。<br
+                  class="sm-hidden"
+                />
+                前に出ること、何かを主張することに躊躇しません。<br
+                  class="sm-hidden"
+                />
                 <br />
                 <span
                   class="personality__text--yellow description__text--yellow"
-                  >「弾丸の如く、早く速く」</span
+                  ><span
+                    ><span>「弾丸の如く、</span><span>早く速く」</span></span
+                  > </span
                 ><br />
                 まずは自分が、誰よりも先に。
               </p>
@@ -226,7 +236,7 @@
                   開発寄りのマネジメントを目指し、まずは開発を極めます。<br />
                   広く浅くではなく、狭く深くでもなく<span
                     class="description__text--md"
-                    >「広く深く」</span
+                    ><br class="lg-hidden" />「広く深く」</span
                   >
                 </p>
               </div>
@@ -263,7 +273,7 @@
                 <h3
                   class="decision__introduction-text decision__introduction-text--right"
                 >
-                  結果にこだわるプレイヤーへ
+                  結果にこだわる<span>プレイヤーへ</span>
                 </h3>
               </div>
               <div class="decision__image-container">
@@ -275,7 +285,9 @@
               </div>
               <div class="decision__text-container">
                 <h4 class="decision__text--md">新人賞をとるのは</h4>
-                <h4 class="decision__text--lg">他の誰でもない、私だっ！</h4>
+                <h4 class="decision__text--lg">
+                  <span>他の誰でもない、</span><span>私だっ！</span>
+                </h4>
               </div>
               <div class="decision__name">若月 翔</div>
             </div>
