feat: モバイル端末のときに矢印を別のものに切り替える機能を実装

--- a/index.html
+++ b/index.html
@@ -69,11 +69,18 @@
               </div>
             </div>
             <div class="arrow__container">
-              <img
-                class="arrow__image arrow__image--translateY5"
-                src="./assets/image/arrow.svg"
-                alt=""
-              />
+              <picture>
+                <source
+                  srcset="./assets/image/arrow-sp.svg"
+                  media="(max-width: 768px)"
+                  type="image/jpg"
+                />
+                <img
+                  class="arrow__image arrow__image--translate"
+                  src="./assets/image/arrow.svg"
+                  alt=""
+                />
+              </picture>
             </div>
           </section>
           <!-- end details section -->
@@ -242,11 +249,18 @@
               </div>
             </div>
             <div class="arrow__container">
-              <img
-                class="arrow__image arrow__image--translateY10"
-                src="./assets/image/arrow.svg"
-                alt=""
-              />
+              <picture>
+                <source
+                  srcset="./assets/image/arrow-sp.svg"
+                  media="(max-width: 768px)"
+                  type="image/jpg"
+                />
+                <img
+                  class="arrow__image arrow__image--translate"
+                  src="./assets/image/arrow.svg"
+                  alt=""
+                />
+              </picture>
             </div>
           </section>
           <!-- end target section -->
