feat: 矢印が上下に動くアニメーションを実装

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/animate.css" />
     <title>My Profile - Sho Wakatsuki</title>
   </head>
   <body>
@@ -68,7 +69,7 @@
                 <h3 class="details__text--motto">結果はあとから付いてくる</h3>
               </div>
             </div>
-            <div class="arrow__container">
+            <div class="arrow__container arrow-animation">
               <picture>
                 <source
                   srcset="./assets/image/arrow-sp.svg"
@@ -248,7 +249,7 @@
                 </p>
               </div>
             </div>
-            <div class="arrow__container">
+            <div class="arrow__container arrow-animation">
               <picture>
                 <source
                   srcset="./assets/image/arrow-sp.svg"
