--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/animate.css" />
+
+    <script src="./assets/js/script.js"></script>
     <title>My Profile - Sho Wakatsuki</title>
   </head>
   <body>
