feat: セクションヘッダーが画面に入ったときにフェードインする機能を実装

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/animate.css" />
 
+    <!-- animate.css cdn -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
     <script src="./assets/js/script.js"></script>
     <title>My Profile - Sho Wakatsuki</title>
   </head>
@@ -129,7 +135,7 @@
                 </div>
                 <p class="favorite__text">
                   ゆるふわなキャラクターが好きで<br />
-                  スマホのホーム画面は常に「うさまる」<br />
+                  スマホのホーム画面は常に「うさまる」(画像右)<br />
                   犬や猫などのもふもふ動物も好きです！
                 </p>
               </div>
