update: favoriteセクションの文字列を左寄せに変更

--- a/index.html
+++ b/index.html
@@ -115,12 +115,8 @@
                   </div>
                 </div>
                 <p class="favorite__text">
-                  1週間ラーメンを口にしないと禁断症状が、、、<br
-                    class="sm-hidden"
-                  />
-                  醤油・味噌・塩・家系・次郎何でもばっちこい。<br
-                    class="sm-hidden"
-                  />
+                  1週間ラーメンを口にしないと禁断症状が、、、
+                  醤油・味噌・塩・家系・次郎何でもばっちこい
                   ラーメンをはじめとして麺類全般が大好きです！
                 </p>
               </div>
@@ -134,8 +130,8 @@
                   </div>
                 </div>
                 <p class="favorite__text">
-                  ゆるふわなキャラクターが好きで<br />
-                  スマホのホーム画面は常に「うさまる」(画像右)<br />
+                  ゆるふわなキャラクターが好きで
+                  スマホのホーム画面は常に「うさまる」(画像右)
                   犬や猫などのもふもふ動物も好きです！
                 </p>
               </div>
