update: pcとモバイルでpersonalityセクションの画像を変更

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
               <div class="details__image-container">
                 <picture>
                   <source
-                    srcset="./assets/image/profile-image-sp.jpg"
+                    srcset="./assets/image/profile-image-sp.png"
                     media="(max-width: 768px)"
                     type="image/jpg"
                   />
                   <img
                     class="details__item-image"
-                    src="./assets/image/profile-image.jpg"
+                    src="./assets/image/profile-image.png"
                     alt="若月翔"
                   />
                 </picture>
@@ -151,11 +151,18 @@
             </div>
             <div class="personality__main max-w-960">
               <div class="personality__image-container">
-                <img
-                  class="personality__image"
-                  src="./assets/image/personality.png"
-                  alt=""
-                />
+                <picture>
+                  <source
+                    srcset="./assets/image/personality-sp.png"
+                    media="(max-width: 768px)"
+                    type="image/jpg"
+                  />
+                  <img
+                    class="personality__image"
+                    src="./assets/image/personality.png"
+                    alt=""
+                  />
+                </picture>
               </div>
               <p class="personality__text">
                 考え込みすぎず、自分の意志をもって突き進みます。<br
