update: personalityセクションに文字を追加

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
               <div class="details__image-container">
                 <picture>
                   <source
-                    srcset="./assets/image/profile-image-sp.png"
+                    srcset="./assets/image/profile-image-sp.jpg"
                     media="(max-width: 768px)"
                     type="image/jpg"
                   />
                   <img
                     class="details__item-image"
-                    src="./assets/image/profile-image.png"
+                    src="./assets/image/profile-image.jpg"
                     alt="若月翔"
                   />
                 </picture>
@@ -87,7 +87,7 @@
                 <img
                   class="arrow__image arrow__image--translate"
                   src="./assets/image/arrow.svg"
-                  alt=""
+                  alt="スクロール↓"
                 />
               </picture>
             </div>
@@ -163,6 +163,10 @@
                     alt=""
                   />
                 </picture>
+              </div>
+              <div class="personality__text-header-contaienr">
+                <h3 class="personality__text--lg">【ENFJ】</h3>
+                <h4 class="personality__text--sub">主人公型</h4>
               </div>
               <p class="personality__text">
                 考え込みすぎず、自分の意志をもって突き進みます。<br
