fix: BEMのクラス名を修正

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 </div>
                 <div class="products__text-container">
                   <h3 class="products__text--name">お問い合わせフォームCMS</h3>
-                  <p class="products__text--description">
+                  <p class="products__text-description">
                     地元山梨の企業さんのフォーム管理システムを開発
                     丸2年かけてPHPで構築しました。
                     SIで使用しているPHPの基礎を習得済みなので、
@@ -319,7 +319,7 @@
                   <span>他の誰でもない、</span><span>私だっ！</span>
                 </h4>
               </div>
-              <div class="decision__name">若月 翔</div>
+              <div class="decision__text-name">若月 翔</div>
             </div>
           </section>
         </div>
