feat: ラーメンのインタラクティブ動作を実装

--- a/index.html
+++ b/index.html
@@ -106,12 +106,21 @@
             </div>
             <div class="favorite__main max-w-960">
               <div class="favorite__row-container">
-                <div class="favorite__images-container">
-                  <div class="favorite__image">
+                <div class="favorite__images-container--interactive">
+                  <div class="favorite__image--interactive">
                     <img src="./assets/image/ramen-miso.jpg" alt="" />
                   </div>
-                  <div class="favorite__image">
+                  <div class="favorite__image--interactive">
                     <img src="./assets/image/ramen-ziro.jpg" alt="" />
+                  </div>
+                  <div class="favorite__image--interactive">
+                    <img src="./assets/image/ramen-miso2.JPG" alt="" />
+                  </div>
+                  <div class="favorite__image--interactive md-hidden">
+                    <img src="./assets/image/ramen-shoyu.JPG" alt="" />
+                  </div>
+                  <div class="favorite__image--interactive md-hidden">
+                    <img src="./assets/image/tukemen.JPG" alt="" />
                   </div>
                 </div>
                 <p class="favorite__text">
