update: テキストの不要な改行を削除

--- a/index.html
+++ b/index.html
@@ -124,9 +124,7 @@
                   </div>
                 </div>
                 <p class="favorite__text">
-                  1週間ラーメンを口にしないと禁断症状が、、、
-                  醤油・味噌・塩・家系・次郎何でもばっちこい
-                  ラーメンをはじめとして麺類全般が大好きです！
+                  1週間ラーメンを口にしないと禁断症状が、、、醤油・味噌・塩・家系・次郎何でもばっちこい。ラーメンをはじめとして麺類全般が大好きです！
                 </p>
               </div>
               <div class="favorite__row-container">
@@ -139,9 +137,7 @@
                   </div>
                 </div>
                 <p class="favorite__text">
-                  ゆるふわなキャラクターが好きで
-                  スマホのホーム画面は常に「うさまる」(画像右)
-                  犬や猫などのもふもふ動物も好きです！
+                  ゆるふわなキャラクターが好きでスマホのホーム画面は常に「うさまる」(画像右)。犬や猫などのもふもふ動物も好きです！
                 </p>
               </div>
             </div>
