update: ファビコンとタイトルを変更

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     />
 
     <script src="./assets/js/script.js"></script>
-    <title>My Profile - Sho Wakatsuki</title>
+    <link rel="icon" href="./assets/image/favicon.ico" />
+    <title>Sho Wakatsuki - My Profile</title>
   </head>
   <body>
     <header class="max-w-1440">
