update: decisionセクションを画面高さ丁度に調整

--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
         </div>
       </div>
     </main>
-    <footer class="max-w-1440">
+    <!-- <footer class="max-w-1440">
       <div>Thank You Watching !!</div>
-    </footer>
+    </footer> -->
   </body>
 </html>
