feat: タイトルにグラデーションアニメーションを実装

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <header class="max-w-1440">
       <div class="header__main">
-        <h1 class="header__main-text header-text__shadow--white-lg">
+        <h1 class="header__main-text text-shine-animation">
           MY <br class="lg-hidden" />PROFILE
         </h1>
       </div>
