--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Sho Wakatsuki" />
+    <meta
+      name="description"
+      content="24卒SI所属エンジニア若月翔の自己紹介ページです。"/>
 
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
