feat: OGP関係を実装

--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
     <meta name="author" content="Sho Wakatsuki" />
     <meta
       name="description"
-      content="24卒SI所属エンジニア若月翔の自己紹介ページです。"/>
+      content="24卒SI所属エンジニア若月翔の自己紹介ページです。"
+    />
+
+    <!-- OGP -->
+    <head prefix="og: http://ogp.me/ns#"></head>
+    <meta property="og:url" content="https://waka-bltinc.github.io/my-lp/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Sho Wakatsuki - My Profile" />
+    <meta
+      property="og:description"
+      content="24卒SI所属エンジニア若月翔の自己紹介ページです。"
+    />
+    <meta property="og:site_name" content="Sho Wakatsuki" />
+    <meta
+      property="og:image"
+      content="	https://waka-bltinc.github.io/my-lp/assets/image/OGP-image.png"
+    />
 
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
