feat: 1:1のOGP画像を実装

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta
       property="og:image"
       content="	https://waka-bltinc.github.io/my-lp/assets/image/OGP-image.png"
+      content="	https://waka-bltinc.github.io/my-lp/assets/image/OGP-image1/1.png"
     />
 
     <!-- google fonts -->
