feat: 画像のalt属性を実装

--- a/index.html
+++ b/index.html
@@ -129,19 +129,31 @@
               <div class="favorite__row-container">
                 <div class="favorite__images-container--interactive">
                   <div class="favorite__image--interactive">
-                    <img src="./assets/image/ramen-miso.jpg" alt="" />
+                    <img
+                      src="./assets/image/ramen-miso.jpg"
+                      alt="味噌ラーメンの画像"
+                    />
                   </div>
                   <div class="favorite__image--interactive">
-                    <img src="./assets/image/ramen-ziro.jpg" alt="" />
+                    <img
+                      src="./assets/image/ramen-ziro.jpg"
+                      alt="次郎ラーメンの画像"
+                    />
                   </div>
                   <div class="favorite__image--interactive">
-                    <img src="./assets/image/ramen-miso2.JPG" alt="" />
+                    <img
+                      src="./assets/image/ramen-gyokai.jpg"
+                      alt="魚介豚骨ラーメンの画像"
+                    />
                   </div>
                   <div class="favorite__image--interactive md-hidden">
-                    <img src="./assets/image/ramen-shoyu.JPG" alt="" />
+                    <img
+                      src="./assets/image/ramen-shoyu.JPG"
+                      alt="醤油ラーメンの画像"
+                    />
                   </div>
                   <div class="favorite__image--interactive md-hidden">
-                    <img src="./assets/image/tukemen.JPG" alt="" />
+                    <img src="./assets/image/tukemen.JPG" alt="つけ麺の画像" />
                   </div>
                 </div>
                 <p class="favorite__text">
@@ -151,10 +163,16 @@
               <div class="favorite__row-container">
                 <div class="favorite__images-container">
                   <div class="favorite__image">
-                    <img src="./assets/image/kedakoda.jpg" alt="" />
+                    <img
+                      src="./assets/image/kedakoda.jpg"
+                      alt="うさまるの画像"
+                    />
                   </div>
                   <div class="favorite__image">
-                    <img src="./assets/image/usamaru.jpg" alt="" />
+                    <img
+                      src="./assets/image/usamaru.jpg"
+                      alt="猫のキャラクターの画像"
+                    />
                   </div>
                 </div>
                 <p class="favorite__text">
@@ -186,7 +204,10 @@
                   <img
                     class="personality__image"
                     src="./assets/image/personality.png"
-                    alt=""
+                    alt="外向 : 外交的で幅広い対人関係
+                    直感 : 独創的な想像力
+                    感情 : 強調と共感
+                    判断 : 即断即決・有限実行"
                   />
                 </picture>
               </div>
@@ -227,7 +248,10 @@
             <div class="products__main max-w-960">
               <div class="products__row-container">
                 <div class="products__image-container">
-                  <img src="./assets/image/form-system.jpg" alt="" />
+                  <img
+                    src="./assets/image/form-system.jpg"
+                    alt="お問い合わせフォームCMS管理画面の画像"
+                  />
                 </div>
                 <div class="products__text-container">
                   <h3 class="products__text--name">お問い合わせフォームCMS</h3>
@@ -244,7 +268,10 @@
               </div>
               <div class="products__row-container">
                 <div class="products__image-container">
-                  <img src="./assets/image/cocktail.jpg" alt="" />
+                  <img
+                    src="./assets/image/cocktail.jpg"
+                    alt="カクテル検索アプリの画像"
+                  />
                 </div>
                 <div class="products__text-container">
                   <h3 class="products__text--name">カクテル検索アプリ</h3>
@@ -274,7 +301,11 @@
             </div>
             <div class="target__main max-w-960">
               <div class="target__image-container">
-                <img class="target__image" src="./assets/image/PM.jpg" alt="" />
+                <img
+                  class="target__image"
+                  src="./assets/image/PM.jpg"
+                  alt="プロジェクトリーダーの画像"
+                />
               </div>
               <div class="target__text-container">
                 <h3 class="target__title description__text--yellow">
@@ -300,7 +331,7 @@
                 <img
                   class="arrow__image arrow__image--translate"
                   src="./assets/image/arrow.svg"
-                  alt=""
+                  alt="下スクロール↓"
                 />
               </picture>
             </div>
@@ -336,7 +367,7 @@
                 <img
                   class="decision__bullet-logo"
                   src="./assets/image/logo.svg"
-                  alt=""
+                  alt="バレットグループ企業ロゴ"
                 />
               </div>
               <div class="decision__text-container">
